<resources>
    <string name="app_name">MyLittleGame</string>
    <string name="logo">Logo</string>
    <string name="new_game">New game</string>
    <string name="load_game">Load game</string>
    <string name="settings">Settings</string>
    <string name="mylittlegame">MyLittleGame</string>
    <string name="enter_your_character_name">Enter your character name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="choisissez_votre_classe">Choose your class</string>
    <string name="select_a_class">[Select a class]</string>
</resources>
