<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="170dp"
    android:background="@drawable/rounded_button"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/enter_your_character_name"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_text-dialog"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#ffffff">

    </EditText>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_done"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#ffffff"
            android:fontFamily="verdana"
            android:clickable="true"
            android:text="@string/done"
            android:textColor="#26418f"
            android:textStyle="bold"
            android:focusable="true" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="verdana"
            android:backgroundTint="#ffffff"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="#26418f"
            android:textStyle="bold"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>