<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5c6bc0"
        tools:context=".start.StartActivity">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mylittlegame"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="@font/pacifico"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_videogame_asset_black_24dp"
            android:layout_marginTop="25dp"
            android:scaleX="3"
            android:scaleY="3"
            android:tint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/main_title"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:contentDescription="@string/logo">

        </ImageView>

        <Button
            android:id="@+id/first_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            app:layout_constraintCircleRadius="15dp"
            android:backgroundTint="#26418f"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/pacifico"
            android:text="@string/new_game"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/main_title"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

        </Button>

        <Button
            android:id="@+id/second_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#26418f"
            android:fontFamily="@font/pacifico"
            android:background="@drawable/rounded_button"
            android:textStyle="bold"
            android:text="@string/load_game"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/first_button"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

        </Button>

        <Button
            android:id="@+id/third_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#26418f"
            android:fontFamily="@font/pacifico"
            android:background="@drawable/rounded_button"
            android:textStyle="bold"
            android:text="@string/settings"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/second_button"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

        </Button>

        <ImageButton
            android:id="@+id/mute_sound_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#26418f"
            android:tint="#ffffff"
            android:padding="10dp"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_volume_up_black_24dp"
            app:layout_constraintTop_toBottomOf="@+id/third_button"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

        </ImageButton>






    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>